testsuite/tests/typecheck/should_fail/tcfail002.stderr

tcfail002.hs:4:7: error:
    Occurs check: cannot construct the infinite type: t0 ~ [t0]
    Relevant bindings include
      z :: [t0] (bound at tcfail002.hs:4:3)
      c :: [t0] -> t0 (bound at tcfail002.hs:3:1)
    In the expression: z
    In an equation for ‘c’: c z = z
